@@ -109,6 +109,8 @@
           <artifactId>maven-javadoc-plugin</artifactId>
           <configuration>
             <excludePackageNames>com.github.robtimus.os.windows.registry.foreign</excludePackageNames>
+            <release>${version.java}</release>
+            <additionalOptions>--enable-preview</additionalOptions>
           </configuration>
         </plugin>
       </plugins>
